--- a/apple.json
+++ b/apple.json
@@ -1,6 +1,6 @@
 {
   "domainUrl":"",
-  "updateUrl":"http://appdown.0615yx.com/jinli_download/",
+  "updateUrl":"http://appdown.jnhongchuang.com/jinli_download/",
   "branches":[
     {
       "code":"1000",
